<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.spinoffpyme.notas.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top">

        <ListView
            android:id="@+id/lvtareas"
            android:layout_width="match_parent"
            android:layout_height="279dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:ems="10"
                android:hint="@string/titulo_tarea"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:ems="10"
                android:hint="@string/descripcion_tarea"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/btnNuevaTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nueva_tarea"
            android:onClick="nuevaTarea"/>

        <FrameLayout
            android:id="@+id/lyDetalleTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
